--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Liboorean</string>
+    <string name="text_tittle_one">Destinasi Wisata</string>
+    <string name="text_tittle_two">Penginapan</string>
+    <string name="text_tittle_three">Kuliner</string>
+    <string name="text_desc_three">Beragam macam wisata kuliner yang ada.</string>
+    <string name="text_desc_two">Tersedia pilihan penginapan sesuai dengan kebutuhan anda.</string>
+    <string name="text_desc_one">Tersedia berbagai macam pilihan destinasi wisata yang dapat dikunjungi.</string>
+    <string name="text_desc_four">Yuk, rencanakan liburanmu bersama di Libooeran !</string>
+    <string name="button_lanjut">Lanjut</string>
+    <string name="button_lewati">Lewati</string>
+    <string name="button_mulai">Mulai</string>
 </resources>
