Implement function Detail on RV

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="text_tittle_one">Destinasi Wisata</string>
     <string name="text_tittle_two">Penginapan</string>
     <string name="text_tittle_three">Kuliner</string>
-    <string name="text_desc_three">Beragam macam wisata kuliner yang ada.</string>
+    <string name="text_desc_three">Beragam macam wisata kuliner yang siap disantap saat liburan anda.</string>
     <string name="text_desc_two">Tersedia pilihan penginapan sesuai dengan kebutuhan anda.</string>
     <string name="text_desc_one">Tersedia berbagai macam pilihan destinasi wisata yang dapat dikunjungi.</string>
     <string name="text_desc_four">Yuk, rencanakan liburanmu bersama di Libooeran !</string>
